# Lumis-erp1224

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
.turbo/cache/: 187cb4948efdcbba-manifest.json  187cb4948efdcbba-meta.json  187cb4948efdcbba.tar.zst
apps/: front
apps/backend/: package.json  stubs-backend.md  tsconfig.json
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/common/guards/: jwt-auth.guard.ts  permissions.guard.ts
apps/backend/src/config/: config.module.ts
apps/backend/src/database/: prisma.service.ts
apps/backend/src/events/: events.module.ts
apps/backend/src/websocket/: websocket.gateway.ts  websocket.module.ts
apps/desktop/: create-icon.js  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/contexts/: I18nProvider.tsx
apps/frontend/src/hooks/: useAdvancedSearch.ts
apps/frontend/src/layouts/: AppLayout.tsx  AuthLayout.tsx
apps/frontend/src/lib/: api.ts  masks.ts  pdf.ts  services.ts
apps/frontend/src/pages/: AuditoriaPage.tsx  ClientesPage.tsx  ComprasPage.tsx  ConfiguracoesPage.tsx  DashboardPage.tsx  EstoquePage.tsx  FinanceiroPage.tsx  FornecedoresPage.tsx  ProdutosPage.tsx  RelatoriosPage.tsx  UsuariosPage.tsx  V  VendasPage.tsx
apps/frontend/src/stores/: auth.store.ts  i18n.store.ts  notification.store.ts  permissions.store.ts  ui.store.ts
docs/: ARCHITECTURE.md
(+47 files in other folders)
