[package]
name = "ferramenta-erp"
version = "1.0.0"
description = "Ferramenta ERP - Gestão Empresarial Inteligente"
authors = ["Ferramenta"]
edition = "2021"

[lib]
name = "ferramenta_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
